# enigma

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  README.md  appveyor.yml  fib.erl  hello.beam
benches/: strcmp.rs
ci/: before_deploy.ps1  before_deploy.sh
enigma/: Cargo.toml
enigma/src/: atom.rs  bif.rs  bitstring.rs  etf.rs  ets.rs  exception.rs  exports_table.rs  instr_ptr.rs  instruction.rs  instruction2.rs  lib.rs  loader.rs  module.rs  module_registry.rs  nanbox.rs  opcodes.rs  persistent_term.rs  port.rs  process.rs  regex.rs  servo_arc.rs  timer.rs  value.rs  vm.rs
enigma/src/bif/: arith.rs  binary.rs  chrono.rs  dtrace.rs  erf.rs  erlang.rs  info.rs  lists.rs  load.rs  maps.rs  os.rs  pdict.rs  prim_buffer.rs  prim_file.rs  timer.rs
enigma/src/ets/: bag.rs  bif.rs  error.rs  hash_table.rs  ordered_set.rs  pam.rs
enigma/src/ets/pam/: error.rs  match.rs
enigma/src/immix/: mod.rs
enigma/src/instruction/: ptr.rs
enigma/src/macros/: arith.rs  mod.rs
enigma/src/numeric/: division.rs  modulo.rs
enigma/src/port/: renderer.rs
enigma/src/process/: registry.rs  table.rs
enigma/src/value/: closure.rs  cons.rs  map.rs  tuple.rs
examples/: Elixir.Bin.S  Elixir.Bin.beam  Elixir.Floats.S  Elixir.Floats.beam  Elixir.Lambda.S  Elixir.Lambda.beam  Elixir.Maps.S  Elixir.Maps.beam  Elixir.Test.S  Elixir.Test.beam  Elixir.Try.S  Elixir.Try.beam  binary.ex  fib.S  fib.beam  fib.ex  floats.ex  hello.S  lambda.ex  map.ex  spawn.ex  spw.S  spw.beam  spw.erl  trycatch.ex
examples/preloaded/: init.S
examples/preloaded/ebin/: erts.app  init.S  prim_file.S
instruction-codegen/: Cargo.toml
instruction-codegen/src/: lib.rs  main.rs
instruction-codegen/tests/: 01-parse-header.rs
notes/: bifs.md  bifs.org  opcodes.md  opcodes.org
src/: arc_without_weak.rs  atom.rs  bif.rs  bitstring.rs  etf.rs  ets.rs  exception.rs  exports_table.rs  instr_ptr.rs  instruction.rs  lib.rs  loader.rs  mailbox.rs  main.rs  module.rs  module_registry.rs  nanbox.rs  opcodes.rs  persistent_term.rs  pool.rs  port.rs  process.rs  process_registry.rs  process_table.rs  queue.rs  regex.rs  servo_arc.rs  signal_queue.rs  value.rs  vm.rs
src/bif/: arith.rs  chrono.rs  dtrace.rs  erlang.rs  info.rs  lists.rs  load.rs  map.rs  maps.rs  os.rs  pdict.rs  prim_buffer.rs  prim_file.rs  timer.rs
src/chashmap/: mod.rs  tests.rs
src/ets/: bag.rs  bif.rs  error.rs  hash_table.rs  ordered_set.rs  pam.rs
src/ets/pam/: error.rs  match.rs
src/immix/: NOTES.md  block.rs
src/macros/: arith.rs  mod.rs
src/numeric/: division.rs  mod.rs  modulo.rs
src/process/: registry.rs  table.rs  tree.rs
src/value/: closure.rs  cons.rs  map.rs  tuple.rs
