[package]
name = "enigma"
version = "0.1.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
license = "MPL-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "archseer/enigma" }
appveyor = { repository = "archseer/enigma" }

[lib]
name = "libenigma"
doctest = false

[[bin]]
name = "enigma"
test = false

[dependencies]
tokio = "0.1.17"
# Only needs to be explicitly imported if you want to make use of
# the machinery to convert promises back and forth between 0.1 and 0.3
# (which is built into the provided await! macro only otherwise):
futures-preview = {version = "0.3.0-alpha.14", features = ["compat", "io-compat"]}

# futures01 = { package = "futures", version = "0.1" }
nom = "4.1.1"
num-bigint = "0.2.2"
num-traits = "0.2.4"
num-integer = "0.1.39"
libflate = "0.1"
once_cell = "0.1.6"
parking_lot = "0.7.0"
allocator_api = "0.5.0"
time = "0.1.40"
chrono = "0.4.6"
bitflags = "1.0.4"
getopts = "0.2.18"
hamt-rs = { git = "https://github.com/archseer/hamt-rs/", branch = "remove-reqs" }
log = "0.4"
hashbrown = "0.2.0"
nodrop = "0.1.13"
statrs = "0.10.0"
lexical = "2.1.0"
dirs = "1.0.5"
owning_ref = "0.4.0" # chashmap dependency
# futures-native-timers = { git = "https://github.com/tinaun/futures-native-timers" }
tokio-threadpool = "0.1.13"
tokio-executor = "0.1.7"
termion = "1.5.1"
tokio-stdin-stdout = "0.1.5"
regex = "1.1.6"
im = "12.3.4"

[dev-dependencies]
quickcheck = "0.8.0"

[profile.release]
# lto = true
# debug = true
