[package]
name = "enigma"
version = "0.1.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
license = "MPL-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "archseer/enigma" }
appveyor = { repository = "archseer/enigma" }

[lib]
name = "libenigma"
doctest = false

[[bin]]
name = "enigma"
test = false

[dependencies]
tokio = "0.1.20"
# Only needs to be explicitly imported if you want to make use of
# the machinery to convert promises back and forth between 0.1 and 0.3
# (which is built into the provided await! macro only otherwise):
# futures-preview = {version = "0.3.0-alpha.14", features = ["compat", "io-compat", "async-await"]}
futures-preview = {git = "https://github.com/rust-lang-nursery/futures-rs/", features = ["compat", "io-compat", "async-await", "nightly"]}

futures01 = { package = "futures", version = "0.1" }
nom = "4.2.3"
num-bigint = "0.2.2"
num-traits = "0.2.7"
num-integer = "0.1.40"
libflate = "0.1.22"
once_cell = "0.2.0"
parking_lot = "0.8.0"
allocator_api = "0.6.0"
time = "0.1.42"
chrono = "0.4.6"
bitflags = "1.0.4"
getopts = "0.2.19"
log = "0.4.6"
hashbrown = "0.3.0"
nodrop = "0.1.13"
statrs = "0.11.0"
lexical = "2.1.0"
dirs = "1.0.5"
# futures-native-timers = { git = "https://github.com/tinaun/futures-native-timers" }
tokio-threadpool = "0.1.14"
tokio-executor = "0.1.7"
termion = "1.5.2"
tokio-stdin-stdout = "0.1.5"
regex = "1.1.6"
im = "13.0.0"
bytes = "0.4.12"
byteorder = "1.3.1"
iovec = "0.1.2"
unicode-segmentation = "1.3.0"
tokio-signal = "0.2.7"
libc = "0.2.55"
simplelog = "0.5.3"
md5 = "0.6.1"
unicode-width = "0.1.5"
# phf = "0.7.24"
# backtrace = "0.3.20"

[dev-dependencies]
quickcheck = "0.8.3"

[profile.release]
lto = true
debug = true
