[package]
name = "enigma"
version = "0.1.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
license = "MPL-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "archseer/enigma" }
appveyor = { repository = "archseer/enigma" }

[lib]
name = "libenigma"
doctest = false

[[bin]]
name = "enigma"
test = false

[dependencies]
instruction-codegen = { path = "../instruction-codegen" }
# tokio = "0.1.20"
# tokio-threadpool = "0.1.14"
# tokio-executor = "0.1.7"
# tokio-signal = "0.2.7"
tokio = {git = "https://github.com/tokio-rs/tokio" }
# tokio-threadpool = {git = "https://github.com/tokio-rs/tokio" }
# tokio-executor = {git = "https://github.com/tokio-rs/tokio" }
tokio-signal = {git = "https://github.com/tokio-rs/tokio" }
futures-preview = { version = "0.3.0-alpha.17", features = ["std", "async-await", "nightly"]} # compat, io-compat
# tokio-stdin-stdout = "0.1.5"
# tokio-stdin-stdout = { path = "../../tokio-stdin-stdout" }
# futures-native-timers = { git = "https://github.com/tinaun/futures-native-timers" }

nom = "4.2.3"
num-bigint = "0.2.2"
num-traits = "0.2.7"
num-integer = "0.1.40"
libflate = "0.1.22"
once_cell = "0.2.0"
parking_lot = "0.9.0"
allocator_api = "0.6.0"
time = "0.1.42"
chrono = "0.4.6"
bitflags = "1.0.4"
getopts = "0.2.19"
log = "0.4.6"
# simplelog = "0.5.3"
hashbrown = "0.5.0"
nodrop = "0.1.13"
lexical = { version = "2.1.0", features = ["radix"]}
dirs = "2.0.1"
termion = "1.5.2"
regex = "1.1.6"
im = "13.0.0"
bytes = "0.4.12"
byteorder = "1.3.1"
libc = "0.2.55"
iovec = "0.1.2"
md5 = "0.6.1"
unicode-segmentation = "1.3.0"
unicode-width = "0.1.5"
# phf = "0.7.24"
# backtrace = "0.3.20"

[dev-dependencies]
quickcheck = "0.8.3"

[profile.release]
lto = true
debug = true
