[package]
name = "instruction-codegen"
version = "0.1.0"
authors = ["Blaž Hrastnik <blaz@mxxn.io>"]
edition = "2018"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dependencies]
syn = { version = "1.0.3", features = ["parsing", "extra-traits"] }
proc-macro2 = "1.0.1"
proc-quote = "0.3.0"
permutate = "0.3.2"
heck = "0.3.1"
# lalrpop-util = "0.17.0"

#[dev-dependencies]
#trybuild = "1.0"

# [build-dependencies]
# lalrpop = "0.17.0"
